worked on phonetic toggle.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@718 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5928,11 +5928,11 @@ img.pull-right {
       background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
       .navbar .logo h1 a:hover {
         background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
-      .navbar .logo h1 a.phonetic {
-        background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
       .navbar .logo h1 a .displace {
         left: -9999px;
         position: absolute; }
+    .navbar .logo h1 .phonetic {
+      background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
     .navbar .logo h1 a.toggle-logo {
       display: block;
       position: absolute;
