--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -8,54 +8,51 @@
 	
 	
 	.logo {
-	 
-  	 h1 {
-  	  position: relative;
+	  position: relative;
 	
-  	  a {
-  		  display: inline-block;
-  		  width: 100%;
-  		  height: 88px;
-  		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
+	  a {
+		  display: inline-block;
+		  width: 100%;
+		  height: 88px;
+		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
 		  
-  		  &:hover {
-  		    background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0;
+		  &:hover {
+		    background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0;
 		    
-  		  }
+		  }
       
-  	    .displace {
-  	        left: -9999px;
-  	        position: absolute;
-  	      }		  
-  	    }
-  	    
-  	    .phonetic {
-          background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0;
-        }
+      &.phonetic {
+        background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0;
+      }
+		   
+	    .displace {
+	        left: -9999px;
+	        position: absolute;
+	      }		  
+	    }
 	    
-  	   a.toggle-logo {
-  	      display: block;
-  	      position: absolute;
-  	      top: 0;
-  	      right: -10px;
-  	      width: 28px;
-  	      height: 27px;
-  	      background: url('../images/logo-toggle.png') no-repeat 0 0;
-  	      -moz-transition: all .5s ease;
-          -webkit-transition: all .5s ease;
-          -o-transition: all .5s ease;
-          transition: all .5s ease;
+	    .toggle-logo {
+	      display: block;
+	      position: absolute;
+	      top: 0;
+	      right: -10px;
+	      width: 28px;
+	      height: 27px;
+	      background: url('../images/logo-toggle.png') no-repeat 0 0;
+	      -moz-transition: all .5s ease;
+        -webkit-transition: all .5s ease;
+        -o-transition: all .5s ease;
+        transition: all .5s ease;
         
-          &:hover {
-            opacity: .5;
-            -moz-transform: rotate(90deg);
-            -webkit-transform: rotate(90deg);
-            -o-transform: rotate(90deg);
-            transform: rotate(90deg);
-            background: url('../images/logo-toggle.png') no-repeat 0 0;
-          }
-  	    } 
-  	  }
+        &:hover {
+          opacity: .5;
+          -moz-transform: rotate(90deg);
+          -webkit-transform: rotate(90deg);
+          -o-transform: rotate(90deg);
+          transform: rotate(90deg);
+          background: url('../images/logo-toggle.png') no-repeat 0 0;
+        }
+	    }
 	  }
 	
 	//.subtitle { 
