worked on phonetic toggle.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@726 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5973,7 +5973,8 @@ img.pull-right {
       box-shadow: none; }
 
 .phonetic {
-  background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
+  background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0;
+  border: 1px solid red; }
 
 /* Institution branding */
 /*------------------------------*/
