worked on phonetic toggle.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@729 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5972,6 +5972,9 @@ img.pull-right {
       -moz-box-shadow: none;
       box-shadow: none; }
 
+.phonetic {
+  background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
+
 /* Institution branding */
 /*------------------------------*/
 .institution-brand {
