worked on phonetic toggle.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@731 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5921,17 +5921,17 @@ img.pull-right {
     width: 1170px; }
   .navbar .logo {
     position: relative; }
-    .navbar .logo a {
+    .navbar .logo h1 a {
       display: inline-block;
       width: 100%;
       height: 88px;
       background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
-      .navbar .logo a:hover {
+      .navbar .logo h1 a:hover {
         background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
-      .navbar .logo a .displace {
+      .navbar .logo h1 a .displace {
         left: -9999px;
         position: absolute; }
-    .navbar .logo .toggle-logo {
+    .navbar .logo h1 .toggle-logo {
       display: block;
       position: absolute;
       top: 0;
@@ -5943,7 +5943,7 @@ img.pull-right {
       -webkit-transition: all .5s ease;
       -o-transition: all .5s ease;
       transition: all .5s ease; }
-      .navbar .logo .toggle-logo:hover {
+      .navbar .logo h1 .toggle-logo:hover {
         opacity: .5;
         -moz-transform: rotate(90deg);
         -webkit-transform: rotate(90deg);
