--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -9,6 +9,8 @@
 	
 	.logo {
 	  position: relative;
+	  
+	  h1 {
 	
 	  a {
 		  display: inline-block;
@@ -50,6 +52,7 @@
         }
 	    }
 	  }
+	}
 	
 	//.subtitle { 
 		//color: #869c4f;
