--- a/css/content.css
+++ b/css/content.css
@@ -5931,7 +5931,7 @@ img.pull-right {
       .navbar .logo h1 a .displace {
         left: -9999px;
         position: absolute; }
-    .navbar .logo h1 .toggle-logo {
+    .navbar .logo .toggle-logo {
       display: block;
       position: absolute;
       top: 0;
@@ -5943,7 +5943,7 @@ img.pull-right {
       -webkit-transition: all .5s ease;
       -o-transition: all .5s ease;
       transition: all .5s ease; }
-      .navbar .logo h1 .toggle-logo:hover {
+      .navbar .logo .toggle-logo:hover {
         opacity: .5;
         -moz-transform: rotate(90deg);
         -webkit-transform: rotate(90deg);
