--- a/css/content.css
+++ b/css/content.css
@@ -5973,7 +5973,7 @@ img.pull-right {
       box-shadow: none; }
 
 .phonetic {
-  background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
+  background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0 !important; }
 
 /* Institution branding */
 /*------------------------------*/
