--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -89,5 +89,5 @@
 }
 
 .phonetic {
-  background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0;
+  background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0 !important; 
 }
