add thumbnail of christopher johnson photo for home page pathway box
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@737 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -129,6 +129,7 @@ a.signale {
 		border: 1px solid #c8c8c8; // TODO: Add variable; change to global rule for images to have border?
 		float: left;
 		margin-right: 10px; }
+	a { font-size: 1.4em; }
 }
 
 /* Other Atlas */
