remove unneeded content/content.css; add styling for pathway box on home page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@738 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6237,6 +6237,8 @@ a.signale {
     border: 1px solid #c8c8c8;
     float: left;
     margin-right: 10px; }
+  .pathway a {
+    font-size: 1.4em; }
 
 /* Other Atlas */
 /*------------------------------*/
