add margin for pull-right and pull-left divs
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@739 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5871,9 +5871,11 @@ h2 {
 
 /* Images */
 /*------------------------------*/
+.pull-left,
 img.pull-left {
   margin: 0 20px 20px 0; }
 
+.pull-right,
 img.pull-right {
   margin: 0 0 20px 20px; }
 
