create a standard button class; for now used on companion volume page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@740 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6311,6 +6311,15 @@ p.caption {
   font-size: 1.625em;
   padding: 8px 13px; }
 
+/* Other buttons, such as book purchase*/
+/*------------------------------*/
+.btn-standard {
+  font-size: 1em;
+  background-color: #83b63d;
+  padding: 10px;
+  color: white;
+  display: inline-block; }
+
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
     width: 940px; }
