--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -49,7 +49,9 @@ img.pull-left {
 .pull-right,
 img.pull-right {
 	margin: 0 0 20px 20px; }
-.cover { width: 200px; }
+.cover { 
+	width: 200px;
+	margin-bottom: .5em; }
 
 /* Icons */
 /*------------------------------*/
