add margin under cover image
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@742 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -51,7 +51,8 @@ img.pull-right {
 	margin: 0 0 20px 20px; }
 .cover { 
 	width: 200px;
-	margin-bottom: .5em; }
+	img { margin-bottom: .5em; }
+}
 
 /* Icons */
 /*------------------------------*/
