--- a/css/content.css
+++ b/css/content.css
@@ -5880,8 +5880,9 @@ img.pull-right {
   margin: 0 0 20px 20px; }
 
 .cover {
-  width: 200px;
-  margin-bottom: .5em; }
+  width: 200px; }
+  .cover img {
+    margin-bottom: .5em; }
 
 /* Icons */
 /*------------------------------*/
