--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -29,7 +29,7 @@
   	    }		  
   	  }
 	  }
-	   .toggle-logo {
+	   /*.toggle-logo {
 	      display: block;
 	      position: absolute;
 	      top: 0;
@@ -50,7 +50,7 @@
           transform: rotate(90deg);
           background: url('../images/logo-toggle.png') no-repeat 0 0;
         }
-	    } 
+	    } */
 	}
 	
 	//.subtitle { 
@@ -88,6 +88,6 @@
 	}
 }
 
-.phonetic {
-  background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0 !important; 
-}
+//.phonetic {
+  //background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0 !important; 
+//}
