--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -358,32 +358,6 @@ body {
 }
 
 
-
-//Carousel
-.carousel-left-limit {
-	
-	height: 220px;
-	width: 80px;
-	background-color: $white;
-	//	@include opacity(.8);
-	position: absolute;
-	top: 49px;
-	left: 0;
-	@include opacity(.8);
-}
-
-.carousel-right-limit {
-	
-	height: 220px;
-	width: 80px;
-	background-color: $white;
-	//opacity: .8;
-	position: absolute;
-	top: 45px;
-	right: 0;
-	@include opacity(.8);
-}
-
 .rs-carousel {
 	
 	ul {
@@ -471,7 +445,7 @@ body {
 		background-position: -5px -63px;
 		width: 38px;
 		height: 100px;
-		@include opacity(.3);
+		@include opacity(0);
 		z-index: 99;
 	}
 	
@@ -487,11 +461,36 @@ body {
 		background-position: -54px -63px;
 		width: 38px;
 		height: 100px;
-		@include opacity(.3);
+		@include opacity(0);
 		z-index: 99;
 		
 	}
 	
+	//Carousel
+  /*.carousel-left-limit {
+
+  	height: 220px;
+  	width: 80px;
+  	background-color: $white;
+  	//	@include opacity(.8);
+  	position: absolute;
+  	top: 49px;
+  	left: 0;
+  	@include opacity(.8);
+  }
+
+  .carousel-right-limit {
+
+  	height: 220px;
+  	width: 80px;
+  	background-color: $white;
+  	//opacity: .8;
+  	position: absolute;
+  	top: 45px;
+  	right: 0;
+  	@include opacity(.8);
+  }*/
+  
 	.rs-carousel-action-active {
 		
 		opacity: 1;
