removed carousel ui navigational control when there is no need of scrolling
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@748 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -466,7 +466,7 @@ body {
 	}
 	
 	//Carousel
-  /*.carousel-left-limit {
+  .carousel-left-limit {
 
   	height: 220px;
   	width: 80px;
@@ -488,7 +488,7 @@ body {
   	top: 45px;
   	right: 0;
   	@include opacity(.8);
-  }*/
+  }
   
 	.rs-carousel-action-active {
 		
