removed carousel ui navigational control when there is no need of scrolling
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@749 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -445,7 +445,7 @@ body {
 		background-position: -5px -63px;
 		width: 38px;
 		height: 100px;
-		@include opacity(0);
+		@include opacity(.8);
 		z-index: 99;
 	}
 	
@@ -461,7 +461,7 @@ body {
 		background-position: -54px -63px;
 		width: 38px;
 		height: 100px;
-		@include opacity(0);
+		@include opacity(.8);
 		z-index: 99;
 	}
 	
