removed carousel ui navigational control when there is no need of scrolling
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@751 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5180,7 +5180,8 @@ body {
   filter: alpha(opacity=80);
   opacity: 0.8; }
 .rs-carousel .rs-carousel-action-active {
-  opacity: 1; }
+  filter: alpha(opacity=80);
+  opacity: 0.8; }
 
 .panels-display {
   position: relative;
