removed carousel ui navigational control when there is no need of scrolling
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@762 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5169,7 +5169,8 @@ body {
   top: 49px;
   left: 0;
   filter: alpha(opacity=80);
-  opacity: 0.8; }
+  opacity: 0.8;
+  display: none; }
 .rs-carousel .carousel-right-limit {
   height: 220px;
   width: 80px;
@@ -5178,7 +5179,8 @@ body {
   top: 45px;
   right: 0;
   filter: alpha(opacity=80);
-  opacity: 0.8; }
+  opacity: 0.8;
+  display: none; }
 .rs-carousel .rs-carousel-action-active {
   filter: alpha(opacity=80);
   opacity: 0.8; }
