removed carousel ui navigational control when there is no need of scrolling
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@763 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5182,6 +5182,7 @@ body {
   opacity: 0.8;
   display: none; }
 .rs-carousel .rs-carousel-action-active {
+  display: block;
   filter: alpha(opacity=80);
   opacity: 0.8; }
 
