--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -659,7 +659,8 @@ body {
 		h5.panel + p,
 		h5.source  + p,
 		h5.measurements + p,
-		h5.repository + p {
+		h5.repository + p,
+		h5.work-type {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
@@ -675,7 +676,7 @@ body {
 			border-radius: 5px;
 		}
 		
-		h5.work-type p.work-type {
+		/*h5.work-type p.work-type {
 			display: inline-block;
 			padding: 0;
 			background-color: $green;
@@ -692,7 +693,7 @@ body {
 				background-color: $green;
 
 			}
-		}
+		}*/
 		
 
 		
