--- a/css/panels.css
+++ b/css/panels.css
@@ -5338,7 +5338,7 @@ body {
     .panels-display .panel-description h5.source + p,
     .panels-display .panel-description h5.measurements + p,
     .panels-display .panel-description h5.repository + p,
-    .panels-display .panel-description h5.work-type {
+    .panels-display .panel-description h5.work-type + p {
       display: inline-block;
       padding: 6px 8px;
       background-color: #4d4e53;
