Style theme panels title.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@784 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -816,6 +816,37 @@ body {
 	height: 100px;
 }*/
 
+//Styles for theme header
+
+.browse-themes {
+  
+  .rs-carousel  {
+
+    h3 {
+      background-color: #1FAAC0;
+      border: medium none;
+      color: #FFFFFF;
+      display: block;
+      font-size: 1.1em;
+      height: 181px;
+      left: 22px;
+      line-height: 1.3em;
+      padding-left: 10px;
+      padding-top: 20px;
+      position: absolute;
+      top: 50px;
+      vertical-align: bottom;
+      width: 138px;
+    }
+  }
+  
+  .rs-carousel-runner {
+    margin-left: 173px;
+  }
+}
+
+
+
 
 @media only screen and ( max-width: 62.5em ) /* 1000 */
 {
