Style theme panels title.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@785 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5470,6 +5470,24 @@ body {
 	width: 38px;
 	height: 100px;
 }*/
+.browse-themes .rs-carousel h3 {
+  background-color: #1FAAC0;
+  border: medium none;
+  color: #FFFFFF;
+  display: block;
+  font-size: 1.1em;
+  height: 181px;
+  left: 22px;
+  line-height: 1.3em;
+  padding-left: 10px;
+  padding-top: 20px;
+  position: absolute;
+  top: 50px;
+  vertical-align: bottom;
+  width: 138px; }
+.browse-themes .rs-carousel-runner {
+  margin-left: 173px; }
+
 @media only screen and (max-width: 62.5em) {
   #nav {
     width: 100%;
