Add active color to main nag when a tab is enabled.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@786 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5088,6 +5088,9 @@ body {
         padding-left: 10px;
         padding-right: 10px; }
 
+.browse-themes header nav .menu li:eq(2) {
+  background-color: #1FAAC0; }
+
 .carousel-toggle {
   background-color: green;
   color: #FFFFFF;
