--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -335,19 +335,15 @@ body {
 	}*/
 }
 
+//guided-pathways
+//selected-panels
 
 .browse-themes {
-  header {
-    nav {
-      
-      .menu {
-      
-        li:eq(2) {
-          background-color: #1FAAC0;
-        }
-      }
-    }
-  }
+  a.nth-child(4) {
+		background-color: $blue;
+		border-bottom: 3px solid $blueLight;
+		color: $white;
+	}
 }
 
 .carousel-toggle {
