Add active color to main nag when a tab is enabled.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@789 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -338,8 +338,9 @@ body {
 //guided-pathways
 //selected-panels
 
+//.browse-themes .page.panels header #nav  ul  li
 .browse-themes {
-  a:nth-child(4) {
+  li:nth-child(4) {
 		background-color: $blue;
 		border-bottom: 3px solid $blueLight;
 		color: $white;
