--- a/css/panels.css
+++ b/css/panels.css
@@ -5088,7 +5088,7 @@ body {
         padding-left: 10px;
         padding-right: 10px; }
 
-.browse-themes a:nth-child(4) {
+.browse-themes li:nth-child(4) {
   background-color: #1faac0;
   border-bottom: 3px solid #37c1d6;
   color: white; }
