Add active color to main nag when a tab is enabled.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@791 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5088,6 +5088,20 @@ body {
         padding-left: 10px;
         padding-right: 10px; }
 
+.selected-panels .page.panels header #nav ul li:nth-child(2) {
+  background-color: #1faac0;
+  border-bottom: 3px solid #37c1d6; }
+  .selected-panels .page.panels header #nav ul li:nth-child(2) a {
+    color: white;
+    background-color: #1faac0; }
+
+.guided-pathways .page.panels header #nav ul li:nth-child(3) {
+  background-color: #1faac0;
+  border-bottom: 3px solid #37c1d6; }
+  .guided-pathways .page.panels header #nav ul li:nth-child(3) a {
+    color: white;
+    background-color: #1faac0; }
+
 .browse-themes .page.panels header #nav ul li:nth-child(4) {
   background-color: #1faac0;
   border-bottom: 3px solid #37c1d6; }
