Fix duplicated active links in main menu.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@793 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -119,8 +119,8 @@ body {
 
 							}
 									#nav > ul > li > a.active {
-									background-color: $blue;
-		    					border-bottom: 3px solid $blueLight;
+									//background-color: $blue;
+		    					//border-bottom: 3px solid $blueLight;
 		    					color: $white;
 								}
 								#nav > ul > li:not( :last-child ) > a
