--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -7,7 +7,8 @@
 	a { color: #fefefe; }
 }
 
-/* Search Box */
+/* Search box */
+/*------------------------------*/
 
 a.search-panels {
   z-index: 99999;
