match search box background in content to panels
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@795 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6034,8 +6034,7 @@ a.search-panels {
     border: 1px solid #a6a6a8;
     color: white;
     width: 140px;
-    margin-left: 20px;
-    color: #000; }
+    margin-left: 20px; }
   #search-panels input[type="submit"] {
     color: white;
     background-color: #83B63D;
