--- a/css/content/_variables.scss
+++ b/css/content/_variables.scss
@@ -9,6 +9,8 @@ $textColorLight: white;
 $grayLight: #a6a6a8;
 $grayLighter: #727375;
 
+$white: #fff;
+
 $linkPrimary: #a7c03a;
 $linkHover: #005580;
 
