make search snippet a smaller font
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@796 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5865,6 +5865,8 @@ h2 {
 .main-content li {
   font-size: 1.4375em;
   line-height: 1.2em; }
+  .main-content li p {
+    font-size: 1em; }
 .main-content h3 {
   font-size: 1.625em;
   margin-top: 1.5em; }
