--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -35,7 +35,9 @@ h2 {
 		line-height: 1.4em; }
 	li { 
 		font-size: 1.4375em;
-		line-height: 1.2em; }
+		line-height: 1.2em;
+		p { font-size: 1em; } // nested <p> tag in search results
+	}
 	h3 { 
 		font-size: 1.625em;
 		margin-top: 1.5em; }
