match standard button hover to home page pathway buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@798 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -83,3 +83,6 @@ p.caption {
   display: inline-block;
   margin-bottom: 5px;
 }
+.btn-standard:hover {
+  background-color: $linkHover;
+  color: $textColorLight; }
