--- a/css/content.css
+++ b/css/content.css
@@ -6325,6 +6325,10 @@ p.caption {
   display: inline-block;
   margin-bottom: 5px; }
 
+.btn-standard:hover {
+  background-color: #005580;
+  color: white; }
+
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
     width: 940px; }
