add hover state to h3 links such as about sidebar nav header
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@799 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -40,7 +40,10 @@ h2 {
 	}
 	h3 { 
 		font-size: 1.625em;
-		margin-top: 1.5em; }
+		margin-top: 1.5em;
+		a,
+		a:hover { color: white; }
+	}
 }
 
 /* Images */
