--- a/css/content.css
+++ b/css/content.css
@@ -5870,6 +5870,9 @@ h2 {
 .main-content h3 {
   font-size: 1.625em;
   margin-top: 1.5em; }
+  .main-content h3 a,
+  .main-content h3 a:hover {
+    color: white; }
 
 /* Images */
 /*------------------------------*/
