--- a/css/panels.css
+++ b/css/panels.css
@@ -5490,7 +5490,8 @@ body {
 .btn-start a {
   font-size: 2em;
   background-color: #7a9945;
-  padding: 10px;
+  padding: 15px 20px;
+  margin-left: 20px;
   color: white;
   display: block; }
 .btn-start a:hover {
