--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -844,7 +844,8 @@ body {
 	a { 
 		font-size: 2em;
 		background-color: $green;
-		padding: 10px;
+		padding: 15px 20px;
+		margin-left: 20px;
 		color: $white;
 		display: block; }
 	a:hover {
