style start pathway button
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@802 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5493,7 +5493,7 @@ body {
   padding: 15px 20px;
   margin-left: 20px;
   color: white;
-  display: block; }
+  display: inline-block; }
 .btn-start a:hover {
   background-color: #1faac0;
   color: white; }
