--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -847,7 +847,7 @@ body {
 		padding: 15px 20px;
 		margin-left: 20px;
 		color: $white;
-		display: block; }
+		display: inline-block; }
 	a:hover {
 		background-color: $blue;
 		color: $white; }
