style start pathway button
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@803 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5496,7 +5496,8 @@ body {
   display: inline-block; }
 .btn-start a:hover {
   background-color: #1faac0;
-  color: white; }
+  color: white;
+  text-decoration: none; }
 
 /*
 .search-panels {
