--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -850,7 +850,8 @@ body {
 		display: inline-block; }
 	a:hover {
 		background-color: $blue;
-		color: $white; }
+		color: $white;
+		text-decoration: none; }
 }
 
 /*
