copy over icon-pathways rule from content side
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@804 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -853,6 +853,13 @@ body {
 		color: $white;
 		text-decoration: none; }
 }
+.icon-pathways {
+	width: 42px;
+	height: 42px;
+	vertical-align: middle;
+	background: url("../images/icon-pathways.png") no-repeat;
+	margin-top: 0;
+	margin-bottom: 4px; }
 
 /*
 .search-panels {
