--- a/css/panels.css
+++ b/css/panels.css
@@ -5488,9 +5488,9 @@ body {
 
 /* Start pathway, previous and next buttons */
 .btn-start a {
-  font-size: 2em;
+  font-size: 1.75em;
   background-color: #7a9945;
-  padding: 15px 20px;
+  padding: 7px 10px 5px 10px;
   margin-left: 20px;
   color: white;
   display: inline-block; }
