--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -842,9 +842,9 @@ body {
 
 .btn-start {
 	a { 
-		font-size: 2em;
+		font-size: 1.75em;
 		background-color: $green;
-		padding: 15px 20px;
+		padding: 7px 10px 5px 10px;
 		margin-left: 20px;
 		color: $white;
 		display: inline-block; }
