style sequence label
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@806 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5507,6 +5507,11 @@ body {
   margin-top: 0;
   margin-bottom: 4px; }
 
+.sequence-label {
+  display: inline-block;
+  margin-left: 20px;
+  font-size: 1.75em; }
+
 /*
 .search-panels {
 	background-position: 0 0;
