--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -860,6 +860,10 @@ body {
 	background: url("../images/icon-pathways.png") no-repeat;
 	margin-top: 0;
 	margin-bottom: 4px; }
+.sequence-label {
+	display: inline-block;
+	margin-left: 20px;
+	font-size: 1.75em; }
 
 /*
 .search-panels {
