style pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@807 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -840,7 +840,8 @@ body {
 
 /* Start pathway, previous and next buttons */
 
-.btn-start {
+.btn-start,
+.btn-pager {
 	a { 
 		font-size: 1.75em;
 		background-color: $green;
