--- a/css/panels.css
+++ b/css/panels.css
@@ -5487,14 +5487,16 @@ body {
           display: none; }
 
 /* Start pathway, previous and next buttons */
-.btn-start a {
+.btn-start a,
+.btn-pager a {
   font-size: 1.75em;
   background-color: #7a9945;
   padding: 7px 10px 5px 10px;
   margin-left: 20px;
   color: white;
   display: inline-block; }
-.btn-start a:hover {
+.btn-start a:hover,
+.btn-pager a:hover {
   background-color: #1faac0;
   color: white;
   text-decoration: none; }
