style pager buttons
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@808 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5514,6 +5514,9 @@ body {
   margin-left: 20px;
   font-size: 1.75em; }
 
+.btn-pager {
+  display: inline-block; }
+
 /*
 .search-panels {
 	background-position: 0 0;
