--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -865,6 +865,7 @@ body {
 	display: inline-block;
 	margin-left: 20px;
 	font-size: 1.75em; }
+.btn-pager { display: inline-block; }
 
 /*
 .search-panels {
