--- a/css/panels.css
+++ b/css/panels.css
@@ -5515,9 +5515,9 @@ body {
 .btn-pager {
   display: inline-block; }
   .btn-pager a {
-    font-size: 1.75em;
+    font-size: 1.5em;
     background-color: #7a9945;
-    padding: 7px 10px 5px 10px;
+    padding: 10px;
     color: white;
     display: inline-block; }
   .btn-pager a:hover {
