--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -867,9 +867,9 @@ body {
 .btn-pager { 
 	display: inline-block;
 	a { 
-		font-size: 1.75em;
+		font-size: 1.5em;
 		background-color: $green;
-		padding: 7px 10px 5px 10px;
+		padding: 10px;
 		color: $white;
 		display: inline-block; }
 	a:hover {
