--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -863,7 +863,8 @@ body {
 .sequence-label {
 	display: inline-block;
 	margin-left: 20px;
-	font-size: 1.75em; }
+	font-size: 1.75em;
+	margin-right: 10px; }
 .btn-pager { 
 	display: inline-block;
 	a { 
@@ -871,7 +872,8 @@ body {
 		background-color: $green;
 		padding: 10px;
 		color: $white;
-		display: inline-block; }
+		display: inline-block;
+		margin-left: 5px; }
 	a:hover {
 		background-color: $blue;
 		color: $white;
