copy icon-arrow and icon-arrow-white rules from content side
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@812 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5527,6 +5527,16 @@ body {
     color: white;
     text-decoration: none; }
 
+.icon-arrow {
+  width: 6px;
+  height: 17px;
+  vertical-align: middle;
+  margin-bottom: 2px;
+  margin-top: 0; }
+
+.icon-arrow-white {
+  background: url("../images/icon-arrow-white.png") no-repeat; }
+
 /*
 .search-panels {
 	background-position: 0 0;
