--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -878,8 +878,15 @@ body {
 		background-color: $blue;
 		color: $white;
 		text-decoration: none; }
-
 }
+.icon-arrow {
+	width: 6px;
+	height: 17px;
+	vertical-align: middle;
+	margin-bottom: 2px;
+	margin-top: 0; }
+.icon-arrow-white {
+	background: url("../images/icon-arrow-white.png") no-repeat; }
 
 /*
 .search-panels {
