add style for previous arrow
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@814 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5537,6 +5537,9 @@ body {
 .icon-arrow-white {
   background: url("../images/icon-arrow-white.png") no-repeat; }
 
+.icon-arrow-white-prev {
+  background: url("../images/icon-arrow-white-prev.png") no-repeat; }
+
 /*
 .search-panels {
 	background-position: 0 0;
