--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -887,6 +887,8 @@ body {
 	margin-top: 0; }
 .icon-arrow-white {
 	background: url("../images/icon-arrow-white.png") no-repeat; }
+.icon-arrow-white-prev {
+	background: url("../images/icon-arrow-white-prev.png") no-repeat; }
 
 /*
 .search-panels {
